[Refacto] 0 debt